--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,22 @@
 {
   "name": "Test the Rest!",
   "description": "Test the Rest.",
-  "version": "0.21.1",  
+
+  "version": "0.21.2",
   "author":"Vishal Joshi",
-  "icons": {
-    "128": "testTheRest.png"
-  },
   "manifest_version": 2,
-  "app": {
-    "background": {
-      "scripts": ["background.js"]
-    }
+  "browser_action": {
+    "default_icon": "testTheRest_128_128.png",
+    "default_popup": "popup.html",
+    "default_title":"Test the Rest."
   },
-  "permissions": ["http://*/"]
+  "background": {
+    "scripts": ["background.js"]
+  },
+  "permissions": [
+    "activeTab",
+    "webRequest",
+    "webRequestBlocking",
+    "http://*/"
+  ]
 }
