--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,7 @@
 {
   "name": "Test the Rest!",
   "description": "Test the Rest.",
-
-  "version": "0.21.2",
+  "version": "0.21.8",
   "author":"Vishal Joshi",
   "manifest_version": 2,
   "browser_action": {
@@ -10,6 +9,10 @@
     "default_popup": "popup.html",
     "default_title":"Test the Rest."
   },
+  "icons": { "16": "testTheRest-16_16.png",
+           "48": "testTheRest-48_48.png",
+          "128": "testTheRest_128_128.png" },
+
   "background": {
     "scripts": ["background.js"]
   },
